<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_loginlogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            android:colorControlActivated = "@color/primary_color"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/iv_loginlogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_emaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:maxLength="30"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_paswdlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/primary_color"
            app:hintTextColor="@color/primary_color"
            android:colorControlActivated = "@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_emaillogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_paswdlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pswd"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:inputType="textPassword"
                android:maxLength="6"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_paswdlogin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:cornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

        </com.google.android.material.button.MaterialButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:foregroundGravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/having_trouble"
                android:textColor="@color/grey"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginStart="3dp"
                android:text="@string/reset_your_password"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/primary_color" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_REGISTER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_reset"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/white"
            android:text="@string/donthaveaccount"
            android:textColor="@color/primary_color"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:cornerRadius="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">


        </com.google.android.material.button.MaterialButton>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_REGISTER"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">
            
            <View
                android:id="@+id/viewleft"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="0.50"
                android:background="@color/light_grey"
                android:visibility="visible"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_orloginwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textColor="@color/grey"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <View
                android:id="@+id/vieweight"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="0.50"
                android:background="@color/light_grey"
                android:visibility="visible"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toBottomOf="@+id/ll_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="16sp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:backgroundTint="@color/fb"
                app:icon="@drawable/fb_btn_logo"
                app:iconTint="@color/white"
                android:layout_margin="2dp"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/google_icon"
                android:textAllCaps="false"
                android:text="@string/google"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:iconTint="@null"
                android:layout_margin="2dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>